005 Web Page Design completed

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="nav_right">
             <p><a class="nav_right_a" href="index.html">HOME</a></p>
-            <p><a class="nav_right_a" href="about.html">ABOUT</a></p>
-            <p><a class="nav_right_a" href="services.html">SERVICES</a></p>
+            <p><a class="nav_right_a" href="about.html" target="_blank">ABOUT</a></p>
+            <p><a class="nav_right_a" href="services.html" target="_blank">SERVICES</a></p>
         </div>
 
     </nav>
@@ -69,8 +69,8 @@
 
 
         <div class="footer_down">
-            <p>Clarusway Web Design, Copyright &#169 2020 </p>
-
+            <p>Clarusway Web Design, Copyright &#169 2022 </p>
+            <img src="img/clarusway_logo.png" alt="">
         </div>
     </footer>
     
